--- a/style-guide-template/index.html
+++ b/style-guide-template/index.html
@@ -39,7 +39,14 @@
 			<h2>Purpose/Theme</h2>
 
 			<div class="cd-box">
-				<p>Add description of purpose/theme here.</p>
+				<p>
+ 					This styleguide is for the basic
+ 					styling of the Zen garden project.
+ 					It defines basic typography, layouts,
+ 					and other useful reusable aspects of the
+ 					styles needed. The overall theme is that
+ 					of an old timey newspaper.
+				</p>
 			</div>
 		</section>
 		
@@ -208,10 +215,9 @@
 		<section id="wireframes" class="cd-wireframes">
 			<h2>Wireframes</h2>
     <div class="cd-box">
-            <figure><img src="assets/wireframe-sm.jpg" alt="Small screen wireframe">
-            <figcaption>Small screen</figcaption></figure>
-            <figure><img src="assets/wireframe-lg.jpg" alt="Large screen wireframe">
-            <figcaption>Large screen</figcaption></figure>
+            <figure><img src="assets/smart-screen-wireframe.jpg" alt="Small screen wireframe">
+						<figcaption>Small screen</figcaption></figure><br>
+						<a href="https://wireframe.cc/WX07yN">Link to large screen</a>
             </div>
 			
 		</section>
